--- a/ScreenRotateForWin10/ScreenRotateForWin10.csproj
+++ b/ScreenRotateForWin10/ScreenRotateForWin10.csproj
@@ -38,8 +38,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>program_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
